--- a/views/dashboards/validateMembership.ejs
+++ b/views/dashboards/validateMembership.ejs
@@ -49,7 +49,19 @@
                                             <div class="row">
                                                 <div class="col-lg-4 p-3">
                                                     <h4>Validate</h4>
-
+                                                    <br>
+                                                    <ul>
+                                                        <% if(readingQueue?.length > 0) { %>
+                                                        <% for(queue of readingQueue) { %>
+                                                        <li>
+                                                            <a class="btn btn-link"
+                                                                onclick="setPlateValue('<%= queue.plate%>')">
+                                                                <%= queue.plate%>
+                                                            </a>
+                                                        </li>
+                                                        <% } %>
+                                                        <% } %>
+                                                    </ul>
                                                     <form id="form-validate-membership" class="pt-3" method="post">
                                                         <div class="row">
                                                             <div class="col-lg-12">
@@ -120,10 +132,16 @@
 
     <!-- End custom js for this page-->
     <script src="../js/helper-functions.js"></script>
-   <!-- Alerts Code -->
+    <!-- Alerts Code -->
     <%- include('../partials/alerts.ejs', {message, alertType}); %>
 
     <script>
+
+        function setPlateValue(plate) {
+            $("#tagNumber").val(plate);
+            $("#validateMembershipBtn").click();
+        }
+
         $("#validateMembershipBtn").on("click", function (event) {
             event.preventDefault();
             event.stopPropagation();
@@ -148,7 +166,7 @@
                     }
                 }).done(function (result) {
                     showResult('#membershipDetails', result);
-                    cleanInput("tagNumber");
+                    // cleanInput("tagNumber");
                 }).fail(function (err) {
                     console.log(err);
                 })
