--- a/views/dashboards/validateMembership.ejs
+++ b/views/dashboards/validateMembership.ejs
@@ -146,7 +146,7 @@
     <%- include('../partials/alerts.ejs', {message, alertType}); %>
 
     <script>
-        const socket = io('http://64.225.27.26/');
+        const socket = io('<%= domain%>');
 
         // Establish Route
         // socket.on('connection');
