--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="../../vendors/flag-icon-css/css/flag-icon.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
-crossorigin="anonymous" referrerpolicy="no-referrer" />
+    integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 <nav class="navbar default-layout col-lg-12 col-12 p-0 fixed-top d-flex align-items-top flex-row">
     <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-start">
@@ -197,6 +197,11 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
                         EN <span class="flag-icon flag-icon-um" style="margin-left: 5px;"></span>
                     </a>
                 </div>
+            </li>
+            <li class="nav-item d-none d-lg-block">
+                <a class="nav-link" href="/home" aria-expanded="false">
+                    <i class="fa-solid fa-list"></i>
+                </a>
             </li>
             <li class="nav-item dropdown d-none d-lg-block user-dropdown">
                 <a class="nav-link" id="UserDropdown" href="#" data-bs-toggle="dropdown" aria-expanded="false">
