--- a/views/cars/create.ejs
+++ b/views/cars/create.ejs
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="../vendors/simple-line-icons/css/simple-line-icons.css">
     <link rel="stylesheet" href="../vendors/css/vendor.bundle.base.css">
     <link rel="stylesheet" href="../../css/register.css">
-
+    <link rel="stylesheet" href="../vendors/select2/select2.min.css">
+    <link rel="stylesheet" href="../vendors/select2-bootstrap-theme/select2-bootstrap.min.css">
     <!-- endinject -->
     <!-- Plugin css for this page -->
     <!-- <link rel="stylesheet" href="../vendors/datatables.net-bs4/dataTables.bootstrap4.css"> -->
@@ -53,9 +54,20 @@
                                                             <label for="carBrand" class="required">Car
                                                                 Brand</label>
 
-                                                            <input type="text" id="carBrand" name="brand"
+                                                            <!-- <input type="text" id="carBrand" name="brand"
                                                                 class="form-control mb-3 form-control-lg"
-                                                                placeholder="Car Brand" autofocus required />
+                                                                placeholder="Car Brand" autofocus required /> -->
+
+                                                            <select id="brand" name="brand" required autofocus
+                                                                onchange="findModel(this.value)"
+                                                                class="form-control mb-3 form-control-lg js-example-basic-single w-100">
+                                                                <option value="">Select One</option>
+                                                                <% for(const make of allMakes) { %>
+                                                                <option value="<%= make.Make_Name%>">
+                                                                    <%= make.Make_Name%>
+                                                                </option>
+                                                                <% } %>
+                                                            </select>
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-6">
@@ -64,9 +76,11 @@
                                                             <label for="carModel" class="required">Car
                                                                 Model</label>
 
-                                                            <input type="text" id="carModel" name="model"
-                                                                class="form-control mb-3 form-control-lg"
-                                                                placeholder="Car Model" autofocus required />
+                                                            <select id="model" name="model" required
+                                                                class="form-control mb-3 form-control-lg js-example-basic-single w-100">
+                                                                <option value="">Select One</option>
+
+                                                            </select>
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-6">
@@ -123,6 +137,9 @@
     <script src="../js/template.js"></script>
     <script src="../js/settings.js"></script>
     <script src="../js/todolist.js"></script>
+
+    <script src="../js/cars.js"></script>
+
     <!-- endinject -->
     <!-- Custom js for this page-->
 
@@ -130,10 +147,12 @@
     <script type="text/javascript" src="../js/account.js"></script>
     <script src="../js/jquery.cookie.js" type="text/javascript"></script>
     <script src="../js/Chart.roundedBarCharts.js"></script>
+    <script src="../vendors/select2/select2.min.js"></script>
+    <script src="../js/select2.js"></script>
 
     <!-- End custom js for this page-->
-
     <%- include('../partials/alerts.ejs', {message, alertType}); %>
+
 </body>
 
 </html>
