--- a/views/cars/edit.ejs
+++ b/views/cars/edit.ejs
@@ -14,7 +14,11 @@
     <link rel="stylesheet" href="../vendors/simple-line-icons/css/simple-line-icons.css">
     <link rel="stylesheet" href="../vendors/css/vendor.bundle.base.css">
     <link rel="stylesheet" href="../../css/register.css">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+        integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="../vendors/select2/select2.min.css">
+    <link rel="stylesheet" href="../vendors/select2-bootstrap-theme/select2-bootstrap.min.css">
     <!-- endinject -->
     <!-- Plugin css for this page -->
     <link rel="stylesheet" href="../js/select.dataTables.min.css">
@@ -46,24 +50,30 @@
                                                 <div class="row">
                                                     <div class="col-lg-6">
                                                         <div class="form-group">
-                                                            <label for="carBrand" class="required">Car
-                                                                Brand</label>
+                                                            <label for="carBrand" class="required">Car Brand</label>
+                                                            <select id="brand" name="brand" required
+                                                                onchange="findModel(this.value)"
+                                                                class="form-control mb-3 form-control-lg js-example-basic-single w-100">
+                                                                <option value="">Select One</option>
+                                                                <% for(const make of allMakes) { %>
+                                                                <% var selected = (make.Make_Name === car.brand.toUpperCase()) ? "selected" : "";   %>
 
-                                                            <input value="<%- car.brand%>" type="text" id="carBrand"
-                                                                name="brand"
-                                                                class="form-control mb-3 form-control-lg"
-                                                                placeholder="Car Brand" autofocus required />
+                                                                <option value="<%= make.Make_Name%>" <%= selected%>>
+                                                                    <%= make.Make_Name%>
+                                                                </option>
+                                                                <% } %>
+                                                            </select>
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-6">
                                                         <div class="form-group">
                                                             <label for="carModel" class="required">Car
                                                                 Model</label>
+                                                            <select id="model" name="model" required
+                                                                class="form-control mb-3 form-control-lg js-example-basic-single w-100">
+                                                                <option value="">Select One</option>
 
-                                                            <input value="<%- car.model%>" type="text" id="carModel"
-                                                                name="model"
-                                                                class="form-control mb-3 form-control-lg"
-                                                                placeholder="Car Model" autofocus required />
+                                                            </select>
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-6">
@@ -72,8 +82,7 @@
                                                                 Plate</label>
 
                                                             <input value="<%- car.plate%>" type="text" id="carPlate"
-                                                                name="plate"
-                                                                class="form-control mb-3 form-control-lg"
+                                                                name="plate" class="form-control mb-3 form-control-lg"
                                                                 placeholder="Car Plate" autofocus required />
                                                         </div>
                                                     </div>
@@ -124,20 +133,29 @@
     <script src="../js/template.js"></script>
     <script src="../js/settings.js"></script>
     <script src="../js/todolist.js"></script>
+
+    <script src="../js/cars.js"></script>
+
     <!-- endinject -->
     <!-- Custom js for this page-->
-    
+
     <script type="text/javascript" src="https://js.stripe.com/v3/"></script>
     <script type="text/javascript" src="../js/account.js"></script>
     <script src="../js/jquery.cookie.js" type="text/javascript"></script>
     <script src="../js/dashboard.js"></script>
     <script src="../js/Chart.roundedBarCharts.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-        integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="../vendors/select2/select2.min.js"></script>
+    <script src="../js/select2.js"></script>
 
     <!-- End custom js for this page-->
+    <script>
+        $(document).ready(function () {
+            var makeSelect = $('#brand');
 
+            if (makeSelect.val() !== '')
+                findModel(makeSelect.val(), '<%= car?.model%>');
+        });
+    </script>
 </body>
 
 </html>
