--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -37,6 +37,11 @@
                     <%= messages.info %>
                 </p>
                 <% } %>
+                <% if (messages.warning) { %>
+                <p class="warning">
+                    <%= messages.warning %>
+                </p>
+                <% } %>
             </li>
         </ul>
         <ul class="navbar-nav ms-auto">
