--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,8 @@
 <footer class="footer">
     <div class="d-sm-flex justify-content-center justify-content-sm-between">
-        <span class="text-muted text-center text-sm-left d-block d-sm-inline-block"> <a href="#" target="_blank">Autocare Subscriptions</a>.</span>
-        <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">Copyright © 2022. All rights reserved.</span>
+        <span class="text-muted text-center text-sm-left d-block d-sm-inline-block"> <a href="#"
+                target="_blank">Autocare Subscriptions</a>.</span>
+        <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">Version <%= version
+            %> | Copyright © 2022. All rights reserved.</span>
     </div>
 </footer>
