--- a/public/css/vertical-layout-light/style.css
+++ b/public/css/vertical-layout-light/style.css
@@ -21795,7 +21795,7 @@ code {
 .home-tab .statistics-details .statistics-title {
     font-style: normal;
     font-weight: 500;
-    font-size: 13px;
+    /* font-size: 13px; */
     line-height: 18px;
     color: #8D8D8D;
     margin-bottom: 4px;
