--- a/views/cars/index.ejs
+++ b/views/cars/index.ejs
@@ -87,21 +87,20 @@
                                                             <td><%- car.services?.length%></td>
 
                                                             <td>
-                                                                <%# if(canManageCars) { %>
-                                                                <% if(car.services.length == 0) { %>
-                                                                <a href="/edit-car/<%- car.id%>?url=/cars" type="button"
-                                                                    class="btn btn-icon btn-icon-no-border no-margin">
+                                                                <% let hasServices = car.services.length > 0 %>
+
+                                                                <a <%- !hasServices ? `href="/edit-car/${car.id}?url=/cars"` : ''%>
+                                                                    type="button"
+                                                                    class="btn btn-icon btn-icon-no-border no-margin <%= hasServices ? 'disabled' : '' %>">
                                                                     <i class="far fa-edit icon-sm"></i>
                                                                 </a>
 
                                                                 <a id="deleteBtn"
-                                                                    onclick="return confirmDelete('/delete-car', '<%- car.id%>')"
-                                                                    class="btn btn-icon btn-icon-no-border no-margin">
+                                                                    <%- !hasServices ? `onclick="return confirmDelete('/delete-car', '${car.id}')"` : ''%>
+                                                                    class="btn btn-icon btn-icon-no-border no-margin <%= hasServices ? 'disabled' : '' %>">
                                                                     <i class="fas fa-trash-alt icon-sm text-danger"></i>
                                                                 </a>
-                                                                <% } else { %>
-                                                                N/A
-                                                                <% } %>
+
                                                             </td>
                                                         </tr>
                                                         <% } %>
